--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyetcodaniel.ProyetcoDaniel
+main.class=multi.maquinas.MultiMaquinas
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
